# data-dashboard

./: .gitignore  BUILD_SUMMARY.md  GOLD_BUILD_PROGRESS.md  PROGRESS_PROTOCOL.md  README.md  SUBAGENT_A.md  SUBAGENT_B.md  SUBAGENT_C.md  SUBAGENT_D.md  biome.json  index.html  package.json  pnpm-lock.yaml  session-scores.json  tsconfig.json  vite.config.ts
.narrative/meta/: repo.json
.narrative/trace/: 2026-02-16T20-44-17-484904+00-00_otlp-5710c10d6bedcaf7ab84004e28d57305b5090df5-2026-02-16T20-44-17-484904+00-00.agent-trace.json  2026-02-16T20-44-21-498737+00-00_otlp-5710c10d6bedcaf7ab84004e28d57305b5090df5-2026-02-16T20-44-21-498737+00-00.agent-trace.json  2026-02-16T20-44-22-502676+00-00_otlp-5710c10d6bedcaf7ab84004e28d57305b5090df5-2026-02-16T20-44-22-502676+00-00.agent-trace.json  2026-02-16T20-44-23-506311+00-00_otlp-5710c10d6bedcaf7ab84004e28d57305b5090df5-2026-02-16T20-44-23-506311+00-00.agent-trace.json  2026-02-16T20-44-39-571586+00-00_otlp-5710c10d6bedcaf7ab84004e28d57305b5090df5-2026-02-16T20-44-39-571586+00-00.agent-trace.json  2026-02-16T20-44-40-572934+00-00_otlp-5710c10d6bedcaf7ab84004e28d57305b5090df5-2026-02-16T20-44-40-572934+00-00.agent-trace.json  2026-02-16T20-44-41-574852+00-00_otlp-5710c10d6bedcaf7ab84004e28d57305b5090df5-2026-02-16T20-44-41-574852+00-00.agent-trace.json  (+809 more)
src/: App.tsx  main.tsx  session-watcher.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  integration_tests.rs  lib.rs  main.rs  performance.rs  retry.rs
src/components/: Dashboard.test.tsx  Dashboard.tsx  RecentSessions.test.tsx  RecentSessions.tsx  (+9 more)
(+6 files in other folders)
