[package]
name = "data-behavior-dashboard"
version = "0.1.0"
description = "Data Behavior Dashboard - Tracks AI agent adherence to operating rules"
authors = ["Jamie Scott Craik"]
edition = "2021"
rust-version = "1.70"
default-run = "data-behavior-dashboard"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
walkdir = "2"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }

# GOLD: Type-safe bridge
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "2.0.0-rc.21", features = ["chrono", "serde", "serde_json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "behavior-scorer"
path = "src/bin/behavior-scorer.rs"

[lib]
name = "data_behavior_dashboard_lib"
path = "src/lib.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
